# Horse

./: .gitignore  CLAUDE.md  Makefile.toml  README.md  build.sh
.github/workflows/: Build.yml
assets/: Apache2.md  README.md
boot/: Cargo.toml  LICENSE
boot/.cargo/: config.toml
boot/src/: main.rs
bootloader/: .gitignore  Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: fb.rs  file.rs  main.rs
dev-tools/: .gitignore  make_image.sh  mount_image.sh  run_image.sh  run_qemu.sh
dev-tools/OVMF/: OVMF_VARS.fd
gallop/: Cargo.toml  x86_64-horse-user.json
gallop/.cargo/: config.toml
gallop/src/: main.rs
horse_abi/: Cargo.toml
horse_abi/src/: error.rs  fb.rs  ioctl.rs  lib.rs  mm.rs  socket.rs  syscall.rs
horse_std/: Cargo.toml
horse_std/examples/: file_io.rs  hello.rs
horse_std/src/: alloc.rs  fb.rs  fs.rs  io.rs  lib.rs  mm.rs
horse_syscall/: Cargo.toml  README.md
horse_syscall/examples/: file_io.rs  hello.rs
horse_syscall/src/: error.rs  fb.rs  fs.rs  io.rs  lib.rs  raw.rs  socket.rs
kernel/: .gitignore  Cargo.toml  asm.s  build.rs  kernel.ld  x86_64-unknown-none-horsekernel.json
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  asmfunc.rs  bit_macros.rs  console.rs  container_of.rs  debugcon.rs  elf.rs  exec.rs  fixed_vec.rs  framebuffer.rs  graphics.rs  interrupt.rs  layer.rs  log.rs  main.rs  memory_allocator.rs  memory_manager.rs  mouse.rs  paging.rs  pci.rs  proc.rs  queue.rs  register.rs  segment.rs  socket.rs  status.rs  sync.rs  syscall.rs  timer.rs  usb.rs  volatile.rs  window.rs
kernel/src/drivers/: detect_dev.rs  mod.rs  pci.rs
kernel/src/drivers/ata/: mod.rs
kernel/src/drivers/ata/pata/: definition.rs  mod.rs
kernel/src/drivers/ata/vata/: mod.rs
kernel/src/drivers/dev/: fb.rs  mod.rs  null.rs  stdin.rs  stdout.rs  zero.rs
kernel/src/drivers/fs/: core.rs  gpt.rs  init.rs  mod.rs  regular.rs
kernel/src/drivers/fs/fat/: core.rs
kernel/src/drivers/timer/: fftimer.rs  hpet.rs  ioapic.rs  manager.rs  mod.rs
kernel/src/drivers/usb/: array_map.rs  buffer.rs  descriptor.rs  endpoint.rs  memory.rs  mod.rs
kernel/src/drivers/usb/classdriver/: cdc.rs  hid.rs  keyboard.rs  mod.rs  mouse.rs
kernel/src/drivers/usb/xhci/: context.rs  devmgr.rs  mod.rs  port.rs  registers.rs  ring.rs  speed.rs  trb.rs
kernel/src/drivers/video/: edid.rs  mod.rs
kernel/src/drivers/video/qemu/: mod.rs
kernel/src/horse_lib/: bit_macros.rs  bytes.rs  fd.rs  io.rs  mod.rs  rbtree.rs  ringbuffer.rs  storage.rs
kernel/src/lib/: bit_macros.rs  bytes.rs  fd.rs  io.rs  mod.rs  storage.rs
kernel/src/syscall/: fs.rs  mm.rs  mod.rs  net.rs  proc.rs  user_mem.rs
kernel/src/usb/: buffer.rs  descriptor.rs  devicemgr.rs  endpoint.rs  memory.rs  mod.rs  registers.rs  setupdata.rs
kernel/src/usb/classdriver/: hid.rs  keyboard.rs  mod.rs  mouse.rs
kernel/src/usb/xhci/: context.rs  devmgr.rs  mod.rs  port.rs  registers.rs  ring.rs  speed.rs  trb.rs
libloader/: Cargo.toml
libloader/src/: lib.rs
shoji/: Cargo.toml  link.ld
shoji/.cargo/: config.toml
shoji/src/: main.rs  runtime.rs
src/: main.rs
