[package]
name = "horse-bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = {version = "0.4", features = ["elf32", "elf64", "endian_fd"], default-features = false}
log = { version = "0.4.11", default-features = false }
uefi = { version = "0.18.0", features = ["exts", "alloc", "logger"] }
libloader = {path = "../libloader"}
