[package]
name = "horse-bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = {version = "0.7.1", features = ["elf32", "elf64", "endian_fd"], default-features = false}
log = { version = "0.4.19", default-features = false }
uefi = { version = "0.24.0", features = ["alloc", "global_allocator", "logger"] }
libloader = {path = "../libloader"}
