[package]
name = "horse_std"
version = "0.1.0"
edition = "2021"
authors = ["Horse OS Contributors"]
description = "Standard library for Horse OS user-space applications"
license = "MIT"

[lib]
name = "horse_std"
crate-type = ["rlib"]

[dependencies]
horse_abi = { path = "../horse_abi" }

[features]
default = []
