[package]
name = "horse-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "0.14.10"
spin = { version = "0.9.8", features = ["lock_api", "mutex", "once"] }
libloader = {path = "../libloader"}

[profile.dev]
panic="abort"
