[package]
name = "horse-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "0.15.2"
spin = { version = "0.10.0", features = ["lock_api", "mutex", "once"] }
libloader = {path = "../libloader"}
uefi = { version = "0.35.0" }
uefi-raw = "0.11.0"

[profile.dev]
panic="abort"
