[package]
name = "shoji"
version = "0.1.0"
edition = "2021"
description = "DisplayServer for Horse OS"

[dependencies]
horse_syscall = { path = "../horse_syscall" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization